// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateMachineViewer highlights current state 1`] = `
<RCTScrollView
  className="flex-1"
>
  <View>
    <View
      className="gap-3 px-4 py-3"
    >
      <View
        className="items-center gap-1.5"
      >
        <View
          className="rounded-full border px-3 py-1.5 bg-primary/20 border-primary"
        >
          <Text
            className="text-sm font-semibold text-primary"
          >
            ● 
            Draft
          </Text>
        </View>
        <View
          className="items-center gap-0.5"
        >
          <View
            className="h-3 w-px bg-muted-foreground/30"
          />
          <Text
            className="text-[10px] text-muted-foreground"
          >
            Publish
          </Text>
          <Text
            className="text-xs text-muted-foreground"
          >
            ↓ 
            Published
          </Text>
        </View>
      </View>
      <View
        className="items-center gap-1.5"
      >
        <View
          className="rounded-full border px-3 py-1.5 bg-card border-border"
        >
          <Text
            className="text-sm font-semibold text-foreground"
          >
            ◎ 
            Published
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`StateMachineViewer renders empty state when no states 1`] = `
<View
  className="items-center py-8"
>
  <Text
    className="text-sm text-muted-foreground"
  >
    No states defined
  </Text>
</View>
`;

exports[`StateMachineViewer renders states with transitions 1`] = `
<RCTScrollView
  className="flex-1"
>
  <View>
    <View
      className="gap-3 px-4 py-3"
    >
      <View
        className="items-center gap-1.5"
      >
        <View
          className="rounded-full border px-3 py-1.5 bg-card border-border"
        >
          <Text
            className="text-sm font-semibold text-foreground"
          >
            ● 
            Draft
          </Text>
        </View>
        <View
          className="items-center gap-0.5"
        >
          <View
            className="h-3 w-px bg-muted-foreground/30"
          />
          <Text
            className="text-[10px] text-muted-foreground"
          >
            Publish
          </Text>
          <Text
            className="text-xs text-muted-foreground"
          >
            ↓ 
            Published
          </Text>
        </View>
      </View>
      <View
        className="items-center gap-1.5"
      >
        <View
          className="rounded-full border px-3 py-1.5 bg-card border-border"
        >
          <Text
            className="text-sm font-semibold text-foreground"
          >
            ◎ 
            Published
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
